Corrected float division

--- a/Exercise1/sheet1.ipynb
+++ b/Exercise1/sheet1.ipynb
@@ -400,7 +400,7 @@
     "        if neighbor(testElem, trainset) != decision(testElem):\n",
     "            Xdisagree.append(testElem)\n",
     "        \n",
-    "    probability = float(len(Xdisagree)/len(testset)) \n",
+    "    probability = float(len(Xdisagree))/float(len(testset)) \n",
     "    # <<<<< END YOUR CODE\n",
     "    return Xdisagree, probability"
    ]
