--- a/Exercise2/sheet2.ipynb
+++ b/Exercise2/sheet2.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROUPNAME = \"\"\n",
-    "COLLABORATORS = \"\""
+    "GROUPNAME = \"Gruppe 12\"\n",
+    "COLLABORATORS = \"384377, 408340, 407886\""
    ]
   },
   {
@@ -466,7 +466,12 @@
    "outputs": [],
    "source": [
     "# >>>>> YOUR CODE HERE\n",
-    "#raise NotImplementedError(\"Replace this line by your code.\")\n",
+    "We can see in the graph that the performance increase is visible starting from about 200 dimensions. \n",
+    "And with 1000 dimensions, the numpy implementation becomes more than ten times faster.\n",
+    "\n",
+    "The speedup is bigger the more data there is: when there are more dimensions and more points to process.\n",
+    "The reason is that Python is a typeless language, whereas Numpy arrays have a type. This allows us to skip type\n",
+    "checks created by the Python compiler, and the time saved adds up, for instance in for and while loops. \n",
     "# <<<<< END YOUR CODE"
    ]
   },
