--- a/Exercise2/sheet2.ipynb
+++ b/Exercise2/sheet2.ipynb
@@ -475,12 +475,14 @@
    ],
    "source": [
     "# >>>>> YOUR CODE HERE\n",
+    "\"\"\"\n",
     "We can see in the graph that the performance increase is visible starting from about 200 dimensions. \n",
     "And with 1000 dimensions, the numpy implementation becomes more than ten times faster.\n",
-    "\n",
     "The speedup is bigger the more data there is: when there are more dimensions and more points to process.\n",
-    "The reason is that Python is a typeless language, whereas Numpy arrays have a type. This allows us to skip type\n",
-    "checks created by the Python compiler, and the time saved adds up, for instance in for and while loops. \n",
+    "For large matrices the the use of numpy should result in an asymptotically constant speedup.\n",
+    "The reason is that Python is an interpreted language, whereas Numpy uses a compiled C core. This allows us to use \n",
+    "native machine code, resulting in faster matix operations.\n",
+    "\"\"\"\n",
     "# <<<<< END YOUR CODE"
    ]
   },
