--- a/Exercise3/sheet3.ipynb
+++ b/Exercise3/sheet3.ipynb
@@ -146,14 +146,6 @@
       "softplus(  1000.0000) =         inf\n",
       "softplus( 10000.0000) =         inf\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/marc/.local/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: overflow encountered in exp\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
     }
    ],
    "source": [
@@ -189,14 +181,6 @@
       "softplus(   100.0000) =    100.0000\n",
       "softplus(  1000.0000) =         inf\n",
       "softplus( 10000.0000) =         inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/marc/.local/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: overflow encountered in exp\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
    ],
@@ -350,9 +334,9 @@
       "softplus(  1000.0000) =   1000.0000\n",
       "softplus( 10000.0000) =  10000.0000\n",
       "Vectorized function needs...\n",
-      "16.4 µs ± 108 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "27.2 µs ± 2.39 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
       "Python loops need...\n",
-      "3.14 ms ± 72.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "6.72 ms ± 142 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -411,14 +395,6 @@
       "    17.2457\n",
       "    89.5932\n",
       "        inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/marc/.local/lib/python3.7/site-packages/ipykernel_launcher.py:7: RuntimeWarning: overflow encountered in exp\n",
-      "  import sys\n"
      ]
     }
    ],
@@ -536,7 +512,7 @@
     "    i = 0\n",
     "    L = np.array([])\n",
     "    for x in itertools.product([-1, 1], repeat=10):\n",
-    "        if 0.001 <= numpy.exp(numpy.dot(x,utils.w_big)-Z):\n",
+    "        if tol <= numpy.exp(numpy.dot(x,utils.w_big)-Z):\n",
     "            L = np.append(L, i)\n",
     "        i += 1\n",
     "    return L\n",
@@ -603,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,8 +588,8 @@
     "def logp(X,m,S):\n",
     "    \n",
     "    # Find the number of dimensions from the data vector\n",
-    "    d = X.shape[1]\n",
-    "    print(X.shape)\n",
+    "    d = m.shape[1]\n",
+    "\n",
     "    # Invert the covariance matrix\n",
     "    Sinv = numpy.linalg.inv(S)\n",
     "    \n",
@@ -642,18 +618,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 1)\n",
-      "   -13.0068\n",
-      "(20, 1)\n",
-      "       -inf\n",
-      "(100, 1)\n",
+      "   -22.1962\n",
       "       -inf\n"
      ]
     },
@@ -661,7 +633,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/marc/.local/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: divide by zero encountered in log\n"
+      "/Users/MarieFrance/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: divide by zero encountered in log\n"
+     ]
+    },
+    {
+     "ename": "OverflowError",
+     "evalue": "(34, 'Result too large')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-b2f4f1092fe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%11.4f'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mlogp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%11.4f'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mlogp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%11.4f'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mlogp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mm3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-7056ddfc9df8>\u001b[0m in \u001b[0;36mlogp\u001b[0;34m(X, m, S)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Divide by the terms in the denominator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0md\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m# Take the product of the probability of each data points\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOverflowError\u001b[0m: (34, 'Result too large')"
      ]
     }
    ],
@@ -683,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -695,25 +679,15 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   -13.0068\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def logp_robust(X,m,S):\n",
     "    # >>>>> YOUR CODE HERE\n",
-    "    #print(m.shape[1], X.shape)\n",
     "    v_arr = (X-m).T\n",
     "    \n",
     "    ldet = np.linalg.slogdet(S)[1] #calculate log of Det directly to avoid overflow issues\n",
     "    \n",
-    "    dim = m.shape[1] * np.log(2*np.pi)  # if instead m.shape[1] there was X.shape there would be the same result as above, however X.shape is not correct\n",
-    "    #print(ldet, dim)\n",
+    "    dim = m.shape[1] * np.log(2*np.pi)  \n",
     "    \n",
     "    # Don't actually invert the Matrix just solve (Ax = b) for x and lift the 2pi^d\n",
     "    n = -0.5 * ((v_arr * np.linalg.solve(S,v_arr)).sum() + (dim + ldet)*X.shape[0])\n",
@@ -721,14 +695,12 @@
     "    #the log probablility is wanted\n",
     "    return n\n",
     "    #raise NotImplementedError(\"Replace this line by your code.\")\n",
-    "    # <<<<< END YOUR CODE\n",
-    "    \n",
-    "print('%11.4f'%logp_robust(utils.X1,utils.m1,utils.S1))"
+    "    # <<<<< END YOUR CODE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -747,9 +719,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   -13.0068\n",
-      " -1947.9710\n",
-      "-218646.1739\n"
+      "   -22.1962\n",
+      " -3767.4693\n",
+      "-259906.5140\n"
      ]
     }
    ],
