--- a/Exercise3/sheet3.ipynb
+++ b/Exercise3/sheet3.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "GROUPNAME = \"Gruppe 12\"\n",
-    "COLLABORATORS = \"384377\""
+    "COLLABORATORS = \"384377, 408340, 407886\""
    ]
   },
   {
