--- a/Exercise4/sheet4.ipynb
+++ b/Exercise4/sheet4.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROUPNAME = \"\"\n",
-    "COLLABORATORS = \"\""
+    "GROUPNAME = \"Gruppe 12\"\n",
+    "COLLABORATORS = \"384377, 408340, 407886\""
    ]
   },
   {
